<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/my_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginBottom="5.0dip"
        android:background="@color/titleBarColor"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/ChooseImage"
        android:textColor="@color/Background_brown"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/BuGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_radius"
        android:text="@string/fromGallery"
        android:textColor="@color/Background_brown"
        android:textSize="20.0sp"
        android:textStyle="bold" />

    <Button

        android:id="@+id/BuCam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_radius"
        android:text="@string/CaptureFormCam"
        android:textColor="@color/Background_brown"
        android:textSize="20.0sp"
        android:textStyle="bold" />

</LinearLayout>