<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_picture"
    tools:context="com.friendsteam_cafehak.app.ForgitPassword">

    <TextView
        android:id="@+id/my_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginBottom="15.0dip"
        android:background="@color/titleBarColor"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/Background_brown"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:theme="@style/TextLabel"
            android:weightSum="1"
            app:hintTextAppearance="@style/CustomTextAppearance">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/First_name"
                    android:layout_width="300dp"
                    android:layout_height="50.0dip"
                    android:background="@color/light_brown"
                    android:drawablePadding="-45dp"
                    android:gravity="center"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="26.0sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkfirst"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:theme="@style/TextLabel"
            android:weightSum="1"
            app:hintTextAppearance="@style/CustomTextAppearance">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/Last_Name"
                    android:layout_width="300dp"
                    android:layout_height="50.0dip"
                    android:background="@color/light_brown"
                    android:drawablePadding="-45dp"
                    android:gravity="center"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="26.0sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checklast"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:theme="@style/TextLabel"
            app:hintTextAppearance="@style/CustomTextAppearance">

            <EditText
                android:id="@+id/Email_id"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@color/light_brown"
                android:drawableLeft="@drawable/ic_person_pin_black_24dp"
                android:drawablePadding="-45dp"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="text"
                android:text=""
                android:textColor="@color/white"
                android:textSize="26.0sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

</RelativeLayout>
