<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_picture">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            style="@style/FacebookLoginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:minHeight="250dp"
            android:onClick="onClick"
            android:paddingBottom="10.0dp"
            android:paddingTop="10.0dp"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onClick" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="430dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/line"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/connect_help"
            android:background="@color/titleBarColor"
            android:gravity="center_horizontal"
            android:paddingTop="5dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="480dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".5"
            android:background="@drawable/button_radius"
            android:onClick="regist"
            android:text="@string/signUp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/login"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".5"
            android:background="@drawable/button_radius"
            android:onClick="onClick"
            android:radius="5dp"
            android:text="@string/Login"
            android:textColorLink="@color/titleBarColor"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/button_radius"
        android:enabled="false"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/Background_brown"
        android:textSize="35sp"
        android:textStyle="normal|bold" />
</RelativeLayout>